[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.(pyi?|ipynb)$'
# extend-exclude = '''
# ^/(
#     docs/conf.py
# )
# '''
# ^
# A regular expression that matches files and directories that should be excluded on recursive searches. An empty
# value means no paths are excluded. Use forward slashes for directories on all platforms (Windows, too). Exclusions
# are calculated first, inclusions later.
# [default: /(\.direnv|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|venv|\.svn|_build|buck-out|build|dist)/
#
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# ^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
#
# Example:
#
# ^/(
#   (
#       \.eggs         # exclude a few common directories in the
#     | \.git          # root of the project
#     | \.hg
#     | \.mypy_cache
#     | \.tox
#     | \.venv
#     | _build
#     | buck-out
#     | build
#     | dist
#   )/
#   | foo.py           # also separately exclude a file named foo.py in
#                      # the root of the project
# )

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D205",
    "D403",
    "D415",
    "D202"
]
